--- a/homework3/task3/index.html
+++ b/homework3/task3/index.html
@@ -15,13 +15,13 @@
     </style>
   </head>
   <body>
-  <form action="#" method="get">
+  <form method="get">
     <label for="name"><p class="field-name">Имя: </p><input type="text" id="name"></label>
     <label for="phone"><p class="field-name">Телефон: </p><input type="text" id="phone"></label>
     <label for="email"><p class="field-name">E-mail: </p><input type="text" id="email"></label>
     <label for="text"><p class="field-name">Сообщение: </p><textarea rows="10" cols="100" id="text"></textarea></label>
-    <br>
-    <button id="submit">Отправить</button>
+    <br><br>
+    <input type="submit" id="submit" value="Отправить">
   </form>
   </body>
 </html>
