--- a/homework3/task3/index.html
+++ b/homework3/task3/index.html
@@ -18,7 +18,7 @@
     </style>
   </head>
   <body>
-  <form action="#" method="post" id="form" name="form">
+  <form action="#" method="post" name="myForm">
     <label for="name"><p class="field-name">Имя: </p><input type="text" id="name"></label>
     <label for="phone"><p class="field-name">Телефон: </p><input type="text" id="phone"></label>
     <label for="email"><p class="field-name">E-mail: </p><input type="text" id="email"></label>
