--- a/homework3/task3/index.html
+++ b/homework3/task3/index.html
@@ -18,10 +18,10 @@
     </style>
   </head>
   <body>
-  <form action="#" method="post" name="myForm">
-    <label for="name"><p class="field-name">Имя: </p><input type="text" id="name"></label>
-    <label for="phone"><p class="field-name">Телефон: </p><input type="text" id="phone"></label>
-    <label for="email"><p class="field-name">E-mail: </p><input type="text" id="email"></label>
+  <form method="get" name="myForm">
+    <label for="name"><p class="field-name">Имя: </p><input type="text" name="name" id="name"></label>
+    <label for="phone"><p class="field-name">Телефон: </p><input type="text" name="phone" id="phone"></label>
+    <label for="email"><p class="field-name">E-mail: </p><input type="text" name="email" id="email"></label>
     <label for="text"><p class="field-name">Сообщение: </p><textarea rows="10" cols="100" id="text"></textarea></label>
     <br><br>
     <input type="submit" id="submit" class="submit" value="Отправить">
