--- a/project/index.html
+++ b/project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/html">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>BRAND</title>
@@ -477,6 +477,6 @@
         </div>
     </footer>
 </div>
-<script src="shop.js"></script>
+<script> </script>
 </body>
 </html>
