--- a/project/index.html
+++ b/project/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="normalize.css">
 </head>
 <body>
+<script src="js/catalog.js"></script>
 <div class="footer-flex">
     <div class="content">
         <header>
@@ -233,103 +234,7 @@
         <section class="featured-items container">
             <h3 class="featured-items__caption">Fetured Items</h3>
             <p class="featured-items__text"> Shop for items based on&nbsp;what we&nbsp;featured in&nbsp;this week</p>
-            <div class="featured-items__list">
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/item1.png" alt="item1">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/item2.png" alt="item2">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/item3.png" alt="item3">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/item4.png" alt="item4">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/item5.png" alt="item5">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/item6.png" alt="item6">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/item7.png" alt="item7">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
-                <div class="item">
-                    <a class="item__link" href="single_page.html">
-                        <img class="item__img" src="img/item8.png" alt="item8">
-                        <div class="item__description">
-                            <p class="item__name">Mango People T-shirt</p>
-                            <span class="item__cost">$52.00</span>
-                        </div>
-                    </a>
-                    <div class="item__add-to-cart-block">
-                        <button class="item__add-to-cart"><i class="fa fa-shopping-cart item__arrow" aria-hidden="true"></i>Add to&nbsp;Cart</button>
-                    </div>
-                </div>
+            <div class="featured-items__list" id="featured-items__list">
             </div>
             <div class="featured-items__add-to-cart-block-center">
                 <a href="#" class="featured-items__all-product">Browse All Product<i class="fa fa-long-arrow-right featured-items__arrow" aria-hidden="true"></i></a>
