--- a/homework7/task1-2-3/index.html
+++ b/homework7/task1-2-3/index.html
@@ -1,8 +1,11 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <script src="js/task1-2-3.js"></script>
     <link rel="stylesheet" href="css/style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="js/task.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.css"/>
   </head>
   <body>
   <div class="featured-items__list" id="slick">
@@ -103,5 +106,6 @@
         </div>
       </div>
     </div>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"></script>
   </body>
 </html>
