--- a/project/product.html
+++ b/project/product.html
@@ -58,48 +58,10 @@
                             <div class="my-acc-block__arrow2"></div>
                             <div class="my-acc-menu">
                                 <table class="my-acc-menu__table">
-                                    <tr class="my-acc-menu__table-row">
-                                        <td class="my-acc-menu__table-cell my-acc-menu__item-img-block">
-                                            <a href="single_page.html"><img class="my-acc-menu__item-img" src="img/cart_img1.png" alt="cart-item"></a>
-                                        </td>
-                                        <td class="my-acc-menu__table-cell">
-                                            <h3 class="my-acc-menu__item-caption">Rebox Zane</h3>
-                                            <p class="my-acc-menu__item-rate">
-                                                <i class="fa fa-star" aria-hidden="true"></i>
-                                                <i class="fa fa-star" aria-hidden="true"></i>
-                                                <i class="fa fa-star" aria-hidden="true"></i>
-                                                <i class="fa fa-star" aria-hidden="true"></i>
-                                                <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                                            </p>
-                                            <p class="my-acc-menu__item-price">1&nbsp;x $250</p>
-                                        </td>
-                                        <td class="my-acc-menu__table-cell my-acc-menu__item-del">
-                                            <button class="my-acc-menu__item-del-button"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
-                                        </td>
-                                    </tr>
-                                    <tr class="my-acc-menu__table-row">
-                                        <td class="my-acc-menu__table-cell">
-                                            <a href="single_page.html"><img class="my-acc-menu__item-img" src="img/cart_img2.png" alt="cart-item"></a>
-                                        </td>
-                                        <td class="my-acc-menu__table-cell">
-                                            <h3 class="my-acc-menu__item-caption">Rebox Zane</h3>
-                                            <p class="my-acc-menu__item-rate">
-                                                <i class="fa fa-star" aria-hidden="true"></i>
-                                                <i class="fa fa-star" aria-hidden="true"></i>
-                                                <i class="fa fa-star" aria-hidden="true"></i>
-                                                <i class="fa fa-star" aria-hidden="true"></i>
-                                                <i class="fa fa-star-half-o" aria-hidden="true"></i>
-                                            </p>
-                                            <p class="my-acc-menu__item-price">1&nbsp;x $250</p>
-                                        </td>
-                                        <td class="my-acc-menu__table-cell my-acc-menu__item-del">
-                                            <button class="my-acc-menu__item-del-button"><i class="fa fa-times-circle" aria-hidden="true"></i></button>
-                                        </td>
-                                    </tr>
                                 </table>
                                 <div class="my-acc-menu__price">
                                     <p class="my-acc-menu__price-text">TOTAL</p>
-                                    <p class="my-acc-menu__price-text">$500.00</p>
+                                    <p class="my-acc-menu__price-text" id="my-acc-menu-price">$500.00</p>
                                 </div>
                                 <a class="my-acc-menu__button" href="checkout.html">Checkout</a>
                                 <a class="my-acc-menu__button" href="shopping_cart.html">Go&nbsp;to&nbsp;cart</a>
@@ -578,6 +540,6 @@
         </div>
     </footer>
 </div>
-<script> </script>
+<script src="js/shoppingCartLittle.js"></script>
 </body>
 </html>
